// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemsCountWarning expect to render compact without error 1`] = `
<WithOptionalToolTip
  showTooltip={true}
>
  <WarningText>
    No Systems
  </WarningText>
</WithOptionalToolTip>
`;

exports[`SystemsCountWarning expect to render count without error 1`] = `
<WithOptionalToolTip
  showTooltip={true}
>
  <WarningText>
    0
  </WarningText>
</WithOptionalToolTip>
`;

exports[`SystemsCountWarning expect to render full without error 1`] = `
<WithOptionalToolTip
  showTooltip={false}
>
  <WarningText>
    Policies without systems will not have reports.
  </WarningText>
</WithOptionalToolTip>
`;

exports[`SystemsCountWarning expect to render without error 1`] = `
<WithOptionalToolTip
  showTooltip={true}
>
  <WarningText>
    No Systems
  </WarningText>
</WithOptionalToolTip>
`;
